--- a/client/src/app/home/home.page.html
+++ b/client/src/app/home/home.page.html
@@ -3,6 +3,7 @@
         <ion-title>{{'Workout' | translate}}</ion-title>
         <ion-buttons slot="end">
             <ion-button (click)="openNewWorkout()">
+                {{ 'New workout' | translate }} &nbsp;
                 <ion-icon name="add-circle-outline"></ion-icon>
             </ion-button>
         </ion-buttons>
