--- a/client/src/app/register/register.page.html
+++ b/client/src/app/register/register.page.html
@@ -15,7 +15,7 @@
             <div class="banner_img center_img">
                 <img src="assets/images/banner_img.png" class="crop_img">
                 <div class="logo animate__animated animate__fadeInUp">
-                    <h1>{{ 'Welcome' | translate }}!</h1>
+                    <h1>{{ 'Welcome' | translate }} to RYPM.!</h1>
                 </div>
             </div>
         </div>
