feat build && docker images && entrypoints

--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -6,17 +6,17 @@
         </ion-tab-button>
 
         <ion-tab-button tab="my_activity">
-            <ion-icon class="zmdi zmdi-equalizer"></ion-icon>
+            <ion-icon name="analytics-outline"></ion-icon>
             <ion-label>{{'Activity' | translate}}</ion-label>
         </ion-tab-button>
 
         <!--<ion-tab-button tab="chats">
-            <ion-icon class="zmdi zmdi-comments"></ion-icon>
+            <ion-icon name="chatbubble-outline"></ion-icon>
             <ion-label>{{'Chat' | translate}}</ion-label>
         </ion-tab-button> -->
 
         <ion-tab-button tab="settings">
-            <ion-icon class="zmdi zmdi-settings"></ion-icon>
+            <ion-icon name="person-outline"></ion-icon>
             <ion-label>{{'Settings' | translate}}</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
