--- a/client/src/app/rest/rest.page.html
+++ b/client/src/app/rest/rest.page.html
@@ -5,7 +5,7 @@
         </ion-buttons>
         <ion-title>
             <div class="title-inner d-flex">
-                <ion-icon class="zmdi zmdi-alert-circle-o end ion-text-end"></ion-icon>
+                <ion-icon name="alert-circle-outline" class="end ion-text-end"></ion-icon>
             </div>
         </ion-title>
     </ion-toolbar>
