--- a/client/src/app/exercise-template/exercise-template-selector/exercise-template-selector.component.scss
+++ b/client/src/app/exercise-template/exercise-template-selector/exercise-template-selector.component.scss
@@ -27,13 +27,17 @@
     padding: 40px 20px;
 }
 
-ion-badge {
+.filter-badge {
     position: absolute;
     top: -8px;
     right: -8px;
     min-width: 16px;
     height: 16px;
     font-size: 10px;
+}
+
+.community-badge {
+    float: right;;
 }
 
 ion-item {
