login fix && version number [ci]

--- a/client/src/app/settings/settings.page.html
+++ b/client/src/app/settings/settings.page.html
@@ -107,6 +107,13 @@
                 </div>
             </div>
         </ion-item>
+
+        <ion-item lines="none" class="animate__animated animate__fadeInUp">
+            <ion-badge slot="end">
+                v{{version}}
+            </ion-badge>
+        </ion-item>
+
     </ion-list>
 </ion-content>
 
