feat small changes [ci]

--- a/client/src/app/home/home.page.html
+++ b/client/src/app/home/home.page.html
@@ -154,7 +154,7 @@
                     </ion-item-options>
                 </ion-item-sliding>
                 } @empty {
-                <app-no-data [text]="'No programs' | translate"></app-no-data>
+                <app-no-data [text]="'No programs yet.' | translate"></app-no-data>
                 }
             </ion-list>
         </ng-container>
@@ -189,7 +189,7 @@
                     </ion-item-options>
                 </ion-item-sliding>
                 } @empty {
-                <app-no-data [text]="'No templates' | translate"></app-no-data>
+                <app-no-data [text]="'No templates yet.' | translate"></app-no-data>
                 }
             </ion-list>
         </ng-container>
