--- a/client/src/app/settings/settings.page.html
+++ b/client/src/app/settings/settings.page.html
@@ -32,10 +32,10 @@
         </ion-button>
     </div>
 
-    <!-- <div class="get_pro d-flex" (click)="get_pro()">
+    <div class="get_pro d-flex" (click)="get_pro()">
         <h2>Get Access to 1000+ Cources</h2>
         <h3 class="end">{{'get_pro' | translate}}</h3>
-    </div> -->
+    </div> 
 
     <ion-list lines="none">
         <ion-item lines="none" class="animate__animated animate__fadeInUp" (click)="toggleTheme()">
@@ -109,9 +109,9 @@
         </ion-item>
 
         <ion-item lines="none" class="animate__animated animate__fadeInUp">
-            <ion-badge slot="end">
+            <span slot="end">
                 v{{version}}
-            </ion-badge>
+            </span>
         </ion-item>
 
     </ion-list>
