--- a/client/src/scss/md/_md.scss
+++ b/client/src/scss/md/_md.scss
@@ -1,3 +1,21 @@
 @import './searchbar.scss';
 @import './segment.scss';
 @import './accordion.scss';
+
+.md {
+    --box-shadow: none;
+    ion-checkbox::part(container) {
+        border-radius: 6px;
+    }
+    ion-header,
+    ion-toolbar,
+    ion-card,
+    ion-footer,
+    ion-fab-button {
+        --box-shadow: none;
+        --app-subtle-shadow:
+            0 4px 16px rgba(0, 0, 0, 0.05),
+            0 2px 6px rgba(0, 0, 0, 0.02); // 0.07 // 0.04
+        box-shadow: none !important; // var(--app-subtle-shadow) !important;
+    }
+}
